--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
 
-    implementation project(':magic')
+    api project(':magic')
 }
