--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,10 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-
-    api project(':magic')
+    implementation 'com.wesksky:magicrecyclerview:1.0'
+    api 'com.android.support:appcompat-v7:23.2.1'
+    api 'com.android.support:recyclerview-v7:23.2.1'
+    api 'com.android.support.constraint:constraint-layout:1.0.2'
 }
