--- a/magic/build.gradle
+++ b/magic/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 
 android {
 
@@ -7,7 +6,7 @@ android {
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -26,19 +25,19 @@ android {
 
 }
 
-publish {
-    userOrg = '601814590'
-    groupId = 'com.wesksky'
-    artifactId = 'magicrecyclerview'
-    publishVersion = '1.0'
-    desc = ''
-    website = 'https://github.com/wesksky/MagicRecyclerView'
-}
+//publish {
+//    userOrg = '601814590'
+//    groupId = 'com.wesksky'
+//    artifactId = 'magicrecyclerview'
+//    publishVersion = '1.0'
+//    desc = ''
+//    website = 'https://github.com/wesksky/MagicRecyclerView'
+//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'com.android.support:appcompat-v7:23.2.1'
-    api 'com.android.support:recyclerview-v7:23.2.1'
-    api 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:23.2.1'
+    implementation 'com.android.support:recyclerview-v7:23.2.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
